--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:theme="@style/Theme.HerbaMedJabar"
         tools:targetApi="31">
 
-        <!-- SplashActivity adalah SATU-SATUNYA titik masuk (LAUNCHER) -->
+        <!-- SplashActivity adalah titik masuk -->
         <activity
             android:name=".view.SplashActivity"
             android:exported="true"
